--- a/package.json
+++ b/package.json
@@ -206,6 +206,7 @@
     "path-scurry": "^1.11.1",
     "pend": "^1.2.0",
     "picocolors": "^1.1.1",
+    "pinia": "^3.0.1",
     "plist": "^3.1.0",
     "postcss": "^8.5.3",
     "process-nextick-args": "^2.0.1",
@@ -239,9 +240,9 @@
     "source-map-support": "^0.5.21",
     "sprintf-js": "^1.1.3",
     "stat-mode": "^1.0.0",
+    "string_decoder": "^1.3.0",
     "string-width": "^4.2.3",
     "string-width-cjs": "^4.2.3",
-    "string_decoder": "^1.3.0",
     "strip-ansi": "^6.0.1",
     "strip-ansi-cjs": "^6.0.1",
     "sumchecker": "^3.0.1",
